subdir('atomic')
subdir('audio')
subdir('camera')
subdir('core')
subdir('cpuinfo')
subdir('dialog')
subdir('dynapi')
subdir('events')
subdir('filesystem')
subdir('gpu')
subdir('haptic')
subdir('hidapi')
subdir('io')
subdir('joystick')
subdir('libm')
subdir('loadso')
subdir('locale')
subdir('main')
subdir('misc')
subdir('power')
subdir('process')
subdir('render')
subdir('sensor')
subdir('stdlib')
subdir('storage')
subdir('thread')
subdir('time')
subdir('timer')
subdir('tray')
subdir('video')

sources += files(
  'SDL.c',
  'SDL_assert.c',
  'SDL_error.c',
  'SDL_guid.c',
  'SDL_hashtable.c',
  'SDL_hints.c',
  'SDL_list.c',
  'SDL_log.c',
  'SDL_properties.c',
  'SDL_utils.c',
)
